<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/fill_data"
            android:textColor="@color/colorPrimary"
            android:textSize="29dp"
            android:textStyle="italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/surname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:hintTextAppearance="@style/MyHintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/group_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/group_nubmer_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_number"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/faculty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/faculty_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sumbit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/save_btn"
            android:textColor="@color/colorPrimary"
            android:textSize="28dp"
            android:textStyle="italic" />

    </LinearLayout>


</ScrollView>


